@@ -1,3 +1,8 @@
+2010-07-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44969
+	* g++.dg/template/sfinae24.C: New.
+
 2010-07-19  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR fortran/44353
