@@ -1,3 +1,9 @@
+2010-07-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44969
+	* tree.c (cp_tree_equal): Compare type of *CAST_EXPR.
+	* pt.c (iterative_hash_template_arg): Hash type of *CAST_EXPR.
+
 2010-07-19  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/44969
